[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Sidebar.gd" type="Script" id=1]

[node name="Sidebar" type="Tree"]
margin_right = 161.0
margin_bottom = 568.0
size_flags_vertical = 3
allow_reselect = true
allow_rmb_select = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SidebarMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false, "Rename", null, 0, false, false, 1, 0, null, "", false, "Show folder", null, 0, false, false, 2, 0, null, "", false, "New folder", null, 0, false, false, 3, 0, null, "", false ]

[node name="Dialog" type="WindowDialog" parent="."]
margin_right = 256.0
margin_bottom = 40.0

[node name="Text" type="LineEdit" parent="Dialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 32.0
size_flags_horizontal = 3
placeholder_text = "Enter name"
placeholder_alpha = 0.5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_activated" from="." to="." method="_on_Sidebar_item_activated"]
[connection signal="item_rmb_selected" from="." to="." method="_on_Sidebar_item_rmb_selected"]
[connection signal="id_pressed" from="SidebarMenu" to="." method="_on_SidebarMenu_id_pressed"]
[connection signal="text_entered" from="Dialog/Text" to="." method="_on_Text_text_entered"]
